# autotest

./: LICENSE  README.md
autotest/: CMakeLists.txt
autotest/cmake/: autotest-config.cmake.in
autotest/include/autotest/: args.hpp  autotest.hpp  builder.hpp  engine.hpp  methods.hpp
autotest/src/: CMakeLists.txt  args.cpp  engine.cpp
example/: CMakeLists.txt
example/include/: block-array.hpp
example/src/: block-array-test.cpp  main.cpp  robin-hood-test.cpp
tools/: show-cov.sh  tests.cmake  use-clang.sh
